@@ -21,15 +21,6 @@ struct Env_map {
   f32 pos_z;
 };
 
-struct Render_basis {
-  v3 position;
-};
-
-struct Render_entity_basis {
-  Render_basis* basis;
-  v3 offset;
-};
-
 enum Render_group_entry_type {
   Render_group_entry_type_Render_entry_clear,
   Render_group_entry_type_Render_entry_bitmap,
@@ -51,6 +42,8 @@ struct Render_entry_coord_system {
   Loaded_bmp* bitmap;
   Loaded_bmp* normal_map;
   
+  //f32 meters_to_pixels;
+  
   Env_map* top;
   Env_map* middle;
   Env_map* bottom;
@@ -65,35 +58,37 @@ struct Render_entry_saturation {
 };
 
 struct Render_entry_rect {
-  Render_entity_basis entity_basis;
+  v2 pos;
   v2 dim;
   v4 color;
 };
 
 struct Render_entry_bitmap {
-  Render_entity_basis entity_basis;
-  Loaded_bmp* bitmap;
   
+  Loaded_bmp* bitmap;
+  v2 pos;
   v2 size;
   v4 color;
 };
 
-struct Render_group_camera {
+struct Render_transform {
+  
+  f32 meters_to_pixels;
+  v2 screen_center;
+  
   f32 focal_length;
   f32 dist_above_target;
+  
+  v3 offset_pos;
+  f32 scale;
 };
 
 struct Render_group {
   
-  Render_group_camera game_camera;
-  Render_group_camera render_camera;
-  
-  f32 meters_to_pixels;
-  v2 monitor_half_dim_meters;
-  
   f32 global_alpha;
   
-  Render_basis* default_basis;
+  v2 monitor_half_dim_meters;
+  Render_transform transform;
   
   u32 max_push_buffer_size;
   u32 push_buffer_size;
